# fenbotics-ide

./: .gitmodules  CMakeLists.txt
scripts/: imgui.cmake
src/: CMakeLists.txt  main.cpp
src/config/: CMakeLists.txt  fen_config.cpp  fen_config.h
src/docker/: CMakeLists.txt  fen_docker.cpp  fen_docker.h
src/gui/: CMakeLists.txt  fen_gui_init.cpp  fen_gui_init.h
